--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "formidable": "^3.5.0",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.1",
     "nodemailer": "^6.9.4",
     "nodemon": "^2.0.22",
+    "npm": "^9.8.1",
     "socket.io": "^4.6.2",
     "superagent": "^8.0.9"
   },
