--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # MONGOOSE_URL = 'mongodb+srv://funix:kakkoi97@atlascluster.4pndcw3.mongodb.net/funix-chat'
-MONGOOSE_URL = 'mongodb+srv://Assignment03:Assignment03@cluster0.6eqa60s.mongodb.net/chat_funix'
+MONGOOSE_URL = 'mongodb+srv://funix:kakkoi97@atlascluster.4pndcw3.mongodb.net/funix-chat'
 PORT = 4001
 JWTKEY = 'askdkasdkaskdkasdks'
