--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "formidable": "^3.5.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.2.1",
     "nodemailer": "^6.9.4",
     "nodemon": "^2.0.22",
